change head path

--- a/project/source/Makefile
+++ b/project/source/Makefile
@@ -2,7 +2,7 @@ CC = g++
 DLIBS = -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_calib3d -lwiringPi -lpthread
 OBJS = main.o gpio.o image.o 
 
-pi-check : main.c $(OBJS)
+pi-check : main.cpp $(OBJS)
 	$(CC) main.c $(OBJS) -o pi-check
 	
 image.o : image.cpp
